--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,8 +1,6 @@
-div {
-    max-width: 1600px;
-}
 #content {
     margin: 0 auto;
+    max-width: 1600px;
 }
 nav a {
     text-align: center;
@@ -75,7 +73,7 @@ footer p {
 footer a:hover {
     color: #02364f;
 }
-.icon {
+.icon, .logo {
     width: 80px;
 }
 #hero-img {
