--- a/jacuancum/styles/site-plan.css
+++ b/jacuancum/styles/site-plan.css
@@ -19,7 +19,7 @@ Fonts are separated by a | */
   --headline-color-on-white: #003049;  /* headlines on a white background */ 
   --headline-color-on-color: white; /* headlines on a colored background */ 
   --paragraph-color-on-white: #003049; /* paragraph text on a white background */ 
-  --paragraph-color-on-color: white; /* paragraph text on a colored background */ 
+  --paragraph-color-on-color: #f77f00; /* paragraph text on a colored background */ 
   --paragraph-background-color: #eae2b7  ;
   --nav-link-color: #003049;
   --nav-background-color: #f77f00;
