--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -202,7 +202,7 @@ footer .social img {
     width: 100%;
     box-shadow: 5px 5px 10px #6f7364;
 }
-/*Page1 css end here then Page2 css start from blow*/
+/*------------------Page1 css end here then Page2 css start from blow--------------------*/
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Trade+Winds&display=swap');
 h5 {
     font-family: 'trade Winds', Arial, sans-serif;
@@ -212,9 +212,103 @@ h5 {
     color: #02364f;
     text-shadow: #ff931f 1px 5px 10px;
 }
-
-
-
+/*-------------------------river1------------------------*/
+.river1-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 20px;
+}
+.river1-img {
+    width: 100%;
+    padding: 20px;
+}
+.river1-img1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    padding: 20px;
+    width: 80%;
+}
+.river1-img2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    padding: 20px;
+    width: 80%;
+}
+.river1-p {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    font-size: 20px;
+    text-align: left;
+    font-weight: normal;
+    text-indent: 15px;
+}
+/*-------------------------river2------------------------*/
+.river2-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 20px;
+}
+.river2-img {
+    width: 100%;
+    height: 300px;
+    padding: 20px;
+    object-fit: cover;
+}
+.river2-img1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    padding: 20px;
+    width: 80%;
+}
+.river2-img2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    padding: 20px;
+    width: 80%;
+}
+.river2-p {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    font-size: 20px;
+    text-align: left;
+    font-weight: normal;
+    text-indent: 15px;
+}
+/*-------------------------river3------------------------*/
+.river3-grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
+    column-gap: 20px;
+}
+.river3-img {
+    width: 100%;
+    height: 300px;
+    padding: 20px;
+    object-fit: cover;
+}
+.river3-img1 {
+    grid-column: 1/2;
+    grid-row: 1/2;
+    padding: 20px;
+    width: 80%;
+}
+.river3-img2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    padding: 20px;
+    width: 80%;
+}
+.river3-p {
+    grid-column: 2/3;
+    grid-row: 1/3;
+    font-size: 20px;
+    text-align: left;
+    font-weight: normal;
+    text-indent: 15px;
+}
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
