--- a/jacuancum/styles/style.css
+++ b/jacuancum/styles/style.css
@@ -10,17 +10,18 @@ header {
     display: flex;
 }
 .social img {
-    width: 50px;
+    width: 40px;
     padding: 10px;
     margin-left: 10px;
 }
 .social {
-    padding-top: 15px;
+    padding-top: 20px;
 }
 .logo {
     width: 80px;
-    padding-top: 10px;
-    padding-left: 10px;
+    border: #5d008f solid 5px;
+    margin-top: 5px;
+    margin-left: 10px;
 }
 #hero-msg {
     font-family: 'bebas neue', 'Courier New', monospace;
@@ -29,8 +30,8 @@ header {
 
 #hero {
     display: grid;
-    grid-template-columns: 1fr 2fr 1fr;
-    grid-template-rows: 1fr 3fr;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr;
     margin-top: -300px;
 }
 #hero-img {
@@ -39,13 +40,19 @@ header {
     z-index: -1;
 }
 #hero-msg {
-    grid-column: 1/3;
+    grid-column: 1/2;
     grid-row: 1/2;
     margin-left: 20px;
     color: #5d008f;
     text-shadow: #fdb321 2px 2px 10px;
 }
-
+#myphoto {
+    width: 150px;
+    border-radius: 50%;
+}
+.topics {
+    display: flex;
+}
 
 
 footer p {
