--- a/jacuancum/styles/style.css
+++ b/jacuancum/styles/style.css
@@ -23,29 +23,37 @@ header a {
     margin-left: 10px;
 }
 .social {
-    padding-top: 20px;
+    align-items: center;
 }
 .logo {
     width: 80px;
     border: #5d008f solid 5px;
-    margin-top: 5px;
+    align-items: center;
     margin-left: 10px;
 }
-#hero-msg {
-    font-family: 'bebas neue', 'Courier New', monospace;
-    font-size: 20px;
+nav {
+    display: flex;
+    align-items: center;
+    margin-right: 0;
+    margin-left:auto;
 }
 
+
+
+/*-------------------------------------------------------------*/
 #hero {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    margin-top: -200px;
+    grid-template-rows: 250px 80px;
+    margin-top: -320px;
+    color: white;
+    margin-left: 20px;
 }
 #hero-img {
-    width: 95%;
+    width: 100%;
     grid-row: 2/3;
     z-index: -1;
+    
 }
 #hero-msg {
     grid-column: 1/2;
@@ -53,11 +61,20 @@ header a {
     margin-left: 20px;
     color: #5d008f;
     text-shadow: #fdb321 2px 2px 10px;
+    font-family: 'bebas neue', 'Courier New', monospace;
+    font-size: 20px;
 }
 #myphoto {
     width: 150px;
     border-radius: 50%;
+    margin-left: 25%;
 }
+
+
+
+
+
+/*-------------------------------------------------------------*/
 footer {
     font-family: roboto condensed, 'Courier New', monospace;
     background-color: #5d008f;
