--- a/jacuancum/styles/style.css
+++ b/jacuancum/styles/style.css
@@ -99,25 +99,31 @@ footer a {
     font-weight: bold;
     display: flex;
     justify-content: space-around;
-    align-items: center;
+    align-items: start;
 }
 .info1 {
     font-family: roboto condensed, 'Courier New', monospace;
     font-size: 18px;
     font-weight: normal;
     width: 250px;
+    padding: 0;
+    margin: 0;
 }
 .info2 {
     font-family: roboto condensed, 'Courier New', monospace;
     font-size: 18px;
     font-weight: normal;
     width: 250px;
+    padding: 0;
+    margin: 0;
 }
 .info3 {
     font-family: roboto condensed, 'Courier New', monospace;
     font-size: 18px;
     font-weight: normal;
     width: 250px;
+    padding: 0;
+    margin: 0;
 }
 .the3topics {
     color: #5d008f;
@@ -125,6 +131,16 @@ footer a {
 p {
     font-family: roboto condensed, 'Courier New', monospace;
 }
+.little-readmore {
+    font-size: 14px;
+    font-weight: normal;
+    margin-top: 0;
+    padding-top: 0;
+    color: black;
+    font-family: roboto condensed, 'Courier New', monospace;
+}
+
+
 
 
 
