--- a/jacuancum/styles/style.css
+++ b/jacuancum/styles/style.css
@@ -151,8 +151,11 @@ p {
     color: black;
     font-family: roboto condensed, 'Courier New', monospace;
 }
-
-
+/*------*/
+#aboutme-grid {
+    grid-template-columns: 10px 1fr 1fr 10px;
+    grid-template-rows: 10px 1fr 1fr 1fr 1fr 10px;
+}
 
 
 
