--- a/jacuancum/styles/style.css
+++ b/jacuancum/styles/style.css
@@ -156,11 +156,46 @@ p {
     color: black;
     font-family: 'roboto condensed', 'Courier New', monospace;
 }
-/*------*/
+
 #aboutme-grid {
-    grid-template-columns: 10px 1fr 1fr 10px;
-    grid-template-rows: 10px 1fr 1fr 1fr 1fr 10px;
+    grid-template-columns: 50px 1fr 1fr 50px;
+    grid-template-rows: 30px 1fr 1fr 1fr 20px;
+    display: grid;
+    justify-items: center;
+    border: #fdb321 solid 5px;
+    column-gap: 10px;
 }
+.aboutmeblock1 {
+    grid-column: 3/4;
+    grid-row: 2/3;
+}
+.aboutmeblock2 {
+    grid-column: 2/3;
+    grid-row: 3/4;
+}
+.aboutmeblock3 {
+    grid-column: 3/4;
+    grid-row: 4/5;
+}
+#aboutme-p {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    font-size: x-large;
+}
+.aboutmep2 {
+    grid-column: 3/4;
+    grid-row: 3/4;
+    font-size: x-large;
+}
+.aboutmep3 {
+    grid-column: 2/3;
+    grid-row: 4/5;
+    font-size: x-large;
+}
+#aboutme-image1,#aboutme-image2,#aboutme-image3,#aboutme-image4 {
+    width: 600px;
+}
+
 
 /*--------------------------------------------------------------------*/
 .hobbiesimages {
@@ -172,6 +207,7 @@ p {
     grid-template-rows: 20px 1fr 1fr 1fr 1fr 20px;
     justify-items: center;
     border: #fdb321 solid 5px;
+    column-gap: 10px;
 }
 .campingblock1 {
     grid-column: 2/3;
